--- a/index.html
+++ b/index.html
@@ -1,205 +1,113 @@
-
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AtendenteBooks Bot</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            background-color: #000;
-            color: #00ff88;
-            font-family: 'Orbitron', sans-serif;
-            overflow-x: hidden;
-        }
-
-        header {
-            background-color: rgba(0, 20, 10, 0.8);
-            padding: 20px;
-            text-align: center;
-            border-bottom: 2px solid #00ff88;
-            box-shadow: 0 0 20px #00ff88;
-        }
-
-        header h1 {
-            font-size: 3rem;
-            text-shadow: 0 0 10px #00ff88, 0 0 20px #00ff88;
-        }
-
-        main {
-            max-width: 800px;
-            margin: 80px auto;
-            text-align: center;
-            padding: 20px;
-            background-color: rgba(0, 20, 10, 0.6);
-            border: 2px solid #00ff88;
-            border-radius: 20px;
-            box-shadow: 0 0 30px #00ff88;
-        }
-
-        main h2 {
-            font-size: 2rem;
-            margin-bottom: 20px;
-            text-shadow: 0 0 10px #00ff88;
-        }
-
-        main p {
-            font-size: 1.1rem;
-            line-height: 1.8;
-            margin-bottom: 30px;
-        }
-
-        .ebook-card {
-            background-color: rgba(0, 30, 15, 0.8);
-            border: 2px solid #00ff88;
-            border-radius: 15px;
-            padding: 20px;
-            margin-bottom: 40px;
-            box-shadow: 0 0 15px #00ff88;
-        }
-
-        .ebook-card h3 {
-            margin-bottom: 10px;
-            text-shadow: 0 0 8px #00ff88;
-        }
-
-        .ebook-card p {
-            margin-bottom: 5px;
-        }
-
-        .bot-button {
-            background-color: #00ff88;
-            color: #000;
-            padding: 15px 40px;
-            border: none;
-            border-radius: 50px;
-            font-size: 1.2rem;
-            cursor: pointer;
-            text-decoration: none;
-            transition: background-color 0.3s, transform 0.3s;
-            box-shadow: 0 0 15px #00ff88;
-        }
-
-        .bot-button:hover {
-            background-color: #00cc70;
-            transform: scale(1.05);
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: rgba(0, 20, 10, 0.8);
-            color: #00ff88;
-            border-top: 2px solid #00ff88;
-            box-shadow: 0 -2px 20px #00ff88;
-        }
-
-        canvas {
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: -1;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Subai Surfes Mobile</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body, html {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      font-family: sans-serif;
+      background: black;
+    }
+    canvas {
+      display: block;
+      margin: auto;
+      background: linear-gradient(to top, #222, #444);
+    }
+    .menu-controle {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 12px;
+      z-index: 99;
+    }
+    .btn {
+      background-color: red;
+      color: white;
+      border: none;
+      padding: 14px 18px;
+      border-radius: 12px;
+      font-size: 20px;
+      box-shadow: 0 0 10px black;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
 
-    <canvas id="particles"></canvas>
+<canvas id="game" width="480" height="640"></canvas>
 
-    <header>
-        <h1>AtendenteBooks</h1>
-    </header>
+<div class="menu-controle">
+  <button class="btn" onclick="simularTecla('ArrowLeft')">⬅️</button>
+  <button class="btn" onclick="simularTecla('ArrowUp')">⬆️</button>
+  <button class="btn" onclick="simularTecla('ArrowDown')">⬇️</button>
+  <button class="btn" onclick="simularTecla('ArrowRight')">➡️</button>
+</div>
 
-    <main>
-        <h2>Seu Ebook Hacker no Telegram</h2>
-        <p>Descubra como ganhar dinheiro com inteligência artificial usando apenas seu celular e as ferramentas certas.</p>
+<script>
+  const canvas = document.getElementById('game');
+  const ctx = canvas.getContext('2d');
 
-        <div class="ebook-card">
-            <h3>📘 10 Formas Práticas de Ganhar Dinheiro com IA</h3>
-            <p><strong>Preço:</strong> R$ 16,60</p>
-            <p>✔️ Ebook prático, direto e atualizado para você começar hoje!</p>
-        </div>
+  let player = { x: 210, y: 500, size: 40, color: 'red' };
+  let lanes = [90, 210, 330];
+  let currentLane = 1;
+  let jumping = false;
+  let jumpY = 0;
 
-        <a class="bot-button" href="https://t.me/Atendentebooks_bot" target="_blank">
-            Acessar o Bot no Telegram
-        </a>
-    </main>
+  function drawPlayer() {
+    ctx.fillStyle = player.color;
+    ctx.fillRect(player.x, player.y - jumpY, player.size, player.size);
+  }
 
-    <footer>
-        © 2025 AtendenteBooks • Todos os direitos reservados.
-    </footer>
+  function update() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    drawPlayer();
+    requestAnimationFrame(update);
+  }
 
-    <script>
-        const canvas = document.getElementById('particles');
-        const ctx = canvas.getContext('2d');
+  function simularTecla(tecla) {
+    const evento = new KeyboardEvent('keydown', { key: tecla });
+    document.dispatchEvent(evento);
+  }
 
-        let particles = [];
-        const particleCount = 120;
+  document.addEventListener('keydown', function(e) {
+    if (e.key === "ArrowLeft") {
+      currentLane = Math.max(0, currentLane - 1);
+      player.x = lanes[currentLane];
+    }
+    if (e.key === "ArrowRight") {
+      currentLane = Math.min(2, currentLane + 1);
+      player.x = lanes[currentLane];
+    }
+    if (e.key === "ArrowUp") {
+      if (!jumping) {
+        jumping = true;
+        let jumpCount = 0;
+        const jumpInterval = setInterval(() => {
+          jumpY = Math.sin(jumpCount / 10) * 80;
+          jumpCount++;
+          if (jumpCount > 30) {
+            clearInterval(jumpInterval);
+            jumping = false;
+            jumpY = 0;
+          }
+        }, 16);
+      }
+    }
+    if (e.key === "ArrowDown") {
+      player.color = 'yellow';
+      setTimeout(() => player.color = 'red', 300);
+    }
+  });
 
-        function resizeCanvas() {
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-        }
-
-        window.addEventListener('resize', resizeCanvas);
-        resizeCanvas();
-
-        class Particle {
-            constructor() {
-                this.reset();
-            }
-
-            reset() {
-                this.x = Math.random() * canvas.width;
-                this.y = Math.random() * canvas.height;
-                this.vx = (Math.random() - 0.5) * 1;
-                this.vy = (Math.random() - 0.5) * 1;
-                this.size = Math.random() * 2 + 1;
-            }
-
-            update() {
-                this.x += this.vx;
-                this.y += this.vy;
-
-                if (this.x < 0 || this.x > canvas.width || this.y < 0 || this.y > canvas.height) {
-                    this.reset();
-                }
-            }
-
-            draw() {
-                ctx.beginPath();
-                ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
-                ctx.fillStyle = '#00ff88';
-                ctx.shadowColor = '#00ff88';
-                ctx.shadowBlur = 10;
-                ctx.fill();
-            }
-        }
-
-        for (let i = 0; i < particleCount; i++) {
-            particles.push(new Particle());
-        }
-
-        function animate() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-            particles.forEach(p => {
-                p.update();
-                p.draw();
-            });
-
-            requestAnimationFrame(animate);
-        }
-
-        animate();
-    </script>
+  update();
+</script>
 
 </body>
 </html>
