--- a/index.html
+++ b/index.html
@@ -1,146 +1,154 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Criador de Cursos Profissionais</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background: #f8f8f8;
-      color: #333;
-    }
-    h1 {
-      color: #0059b3;
-    }
-    .container {
-      max-width: 700px;
-      margin: auto;
-      background: white;
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.1);
-    }
-    label {
-      display: block;
-      margin-top: 15px;
-      font-weight: bold;
-    }
-    input[type="text"], textarea, select {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-    textarea {
-      resize: vertical;
-    }
-    button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #0056b3;
-    }
-    .resultado {
-      margin-top: 30px;
-      padding: 20px;
-      background: #e6f3ff;
-      border-left: 5px solid #007bff;
-      border-radius: 8px;
-    }
-    ul {
-      padding-left: 20px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>combinaBR store</title>
+    <style>
+        /* Reset básico */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
+
+        body {
+            background-color: #000;
+            color: #fff;
+            line-height: 1.6;
+        }
+
+        a {
+            color: #00ff00;
+            text-decoration: none;
+        }
+
+        header {
+            background-color: #111;
+            padding: 20px;
+            text-align: center;
+        }
+
+        header h1 {
+            color: #00ff00;
+            font-size: 2.5em;
+        }
+
+        nav {
+            margin-top: 10px;
+        }
+
+        nav a {
+            margin: 0 15px;
+            font-weight: bold;
+        }
+
+        main {
+            padding: 40px 20px;
+        }
+
+        .produtos {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
+
+        .produto {
+            background-color: #111;
+            padding: 20px;
+            border: 2px solid #00ff00;
+            border-radius: 10px;
+            text-align: center;
+            transition: transform 0.3s;
+        }
+
+        .produto:hover {
+            transform: scale(1.05);
+        }
+
+        .produto img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 15px;
+        }
+
+        .produto h2 {
+            color: #00ff00;
+            margin-bottom: 10px;
+        }
+
+        .produto p {
+            margin-bottom: 15px;
+        }
+
+        .produto button {
+            padding: 10px 20px;
+            border: none;
+            background-color: #00ff00;
+            color: #000;
+            font-weight: bold;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .produto button:hover {
+            background-color: #00cc00;
+        }
+
+        footer {
+            background-color: #111;
+            text-align: center;
+            padding: 20px;
+            margin-top: 40px;
+            border-top: 2px solid #00ff00;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Chatbot Criador de Cursos</h1>
-    <form id="cursoForm">
-      <label for="titulo">Título do Curso:</label>
-      <input type="text" id="titulo" required />
+    <header>
+        <h1>combinaBR store</h1>
+        <nav>
+            <a href="#produtos">Produtos</a>
+            <a href="#contato">Contato</a>
+        </nav>
+    </header>
 
-      <label for="descricao">Descrição do Curso:</label>
-      <textarea id="descricao" rows="3" required></textarea>
+    <main>
+        <section id="produtos">
+            <h2 style="text-align:center; margin-bottom:30px;">Nossos Produtos</h2>
+            <div class="produtos">
+                <div class="produto">
+                    <img src="https://via.placeholder.com/200x200.png?text=Produto+1" alt="Produto 1">
+                    <h2>Produto 1</h2>
+                    <p>Descrição breve do produto 1.</p>
+                    <button>Comprar</button>
+                </div>
+                <div class="produto">
+                    <img src="https://via.placeholder.com/200x200.png?text=Produto+2" alt="Produto 2">
+                    <h2>Produto 2</h2>
+                    <p>Descrição breve do produto 2.</p>
+                    <button>Comprar</button>
+                </div>
+                <div class="produto">
+                    <img src="https://via.placeholder.com/200x200.png?text=Produto+3" alt="Produto 3">
+                    <h2>Produto 3</h2>
+                    <p>Descrição breve do produto 3.</p>
+                    <button>Comprar</button>
+                </div>
+            </div>
+        </section>
 
-      <label for="publico">Público-Alvo:</label>
-      <input type="text" id="publico" required />
+        <section id="contato" style="margin-top:50px; text-align:center;">
+            <h2>Contato</h2>
+            <p>Email: contato@combinabrstore.com</p>
+            <p>Telefone: (31) 99999-9999</p>
+        </section>
+    </main>
 
-      <label for="paleta">Paleta de Cores:</label>
-      <select id="paleta" required>
-        <option value="">Escolha uma opção</option>
-        <option value="1">Profissional Moderno (Azul Marinho, Cinza Carvão, Branco, Dourado)</option>
-        <option value="2">Criativo Vibrante (Verde Água, Laranja Cítrico, Roxo Lavanda, Amarelo Sol)</option>
-        <option value="3">Minimalista Elegante (Preto, Branco, Tons de Cinza, Prata)</option>
-        <option value="4">Natural Inspirador (Verde Musgo, Bege, Marrom Terra, Azul Céu)</option>
-        <option value="5">Tecnológico Futurista (Azul Elétrico, Preto, Prata Metálico, Ciano)</option>
-      </select>
-
-      <button type="submit">Gerar Curso</button>
-    </form>
-
-    <div id="resultado" class="resultado" style="display:none;"></div>
-  </div>
-
-  <script>
-    const paletas = {
-      "1": ["Profissional Moderno", "Azul Marinho, Cinza Carvão, Branco, Dourado"],
-      "2": ["Criativo Vibrante", "Verde Água, Laranja Cítrico, Roxo Lavanda, Amarelo Sol"],
-      "3": ["Minimalista Elegante", "Preto, Branco, Tons de Cinza, Prata"],
-      "4": ["Natural Inspirador", "Verde Musgo, Bege, Marrom Terra, Azul Céu"],
-      "5": ["Tecnológico Futurista", "Azul Elétrico, Preto, Prata Metálico, Ciano"]
-    };
-
-    document.getElementById("cursoForm").addEventListener("submit", function(e) {
-      e.preventDefault();
-
-      const titulo = document.getElementById("titulo").value.trim();
-      const descricao = document.getElementById("descricao").value.trim();
-      const publico = document.getElementById("publico").value.trim();
-      const paletaEscolhida = document.getElementById("paleta").value;
-
-      let palavraChave = titulo.split("para")[0] || titulo.split("de")[0] || "Seu Tema";
-      palavraChave = palavraChave.trim();
-
-      const modulos = [
-        "Módulo 0: Introdução ao Curso e Como Aproveitar ao Máximo",
-        `Módulo 1: Fundamentos de ${palavraChave}`,
-        "Módulo 2: Estratégias Avançadas e Ferramentas Práticas",
-        "Módulo 3: Estudos de Caso e Aplicações Reais",
-        "Módulo 4: Montando Seu Projeto e Próximos Passos",
-        "Módulo Final: Conclusão, Recursos Adicionais e Certificado"
-      ];
-
-      let preco = 99.99;
-      if (descricao.length > 100) preco += 50;
-      if (titulo.toLowerCase().includes("avançado") || titulo.toLowerCase().includes("master") || titulo.toLowerCase().includes("completo")) {
-        preco += 100;
-      }
-
-      const [nomePaleta, cores] = paletas[paletaEscolhida];
-
-      // Exibir resultado
-      const resultadoDiv = document.getElementById("resultado");
-      resultadoDiv.style.display = "block";
-      resultadoDiv.innerHTML = `
-        <h2>🎉 Curso Gerado com Sucesso!</h2>
-        <p><strong>Título:</strong> ${titulo}</p>
-        <p><strong>Descrição:</strong> ${descricao}</p>
-        <p><strong>Público-Alvo:</strong> ${publico}</p>
-        <p><strong>Paleta de Cores:</strong> ${nomePaleta} (${cores})</p>
-        <p><strong>Preço Sugerido:</strong> R$ ${preco.toFixed(2)}</p>
-        <h3>📘 Estrutura do Curso:</h3>
-        <ul>${modulos.map(m => `<li>${m}</li>`).join('')}</ul>
-      `;
-    });
-  </script>
+    <footer>
+        &copy; 2025 combinaBR store - Todos os direitos reservados
+    </footer>
 </body>
 </html>
