--- a/index.html
+++ b/index.html
@@ -1,154 +1,120 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>combinaBR store</title>
-    <style>
-        /* Reset básico */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>combinaBR store</title>
+<style>
+    * { margin:0; padding:0; box-sizing:border-box; font-family: 'Courier New', Courier, monospace; }
+    html, body { width:100%; height:100%; overflow:hidden; background:black; color:#00ff99; }
+    canvas { display:block; position:absolute; top:0; left:0; z-index:-1; }
 
-        body {
-            background-color: #000;
-            color: #fff;
-            line-height: 1.6;
-        }
+    .container {
+        position: relative;
+        width:100%;
+        height:100%;
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
+        align-items:center;
+        text-align:center;
+        pointer-events:none;
+    }
 
-        a {
-            color: #00ff00;
-            text-decoration: none;
-        }
+    h1 {
+        font-size:4em;
+        color:#00ff99;
+        font-weight:100;
+        margin-bottom:20px;
+        text-shadow: 0 0 10px #00ff99, 0 0 20px #00ff99, 0 0 30px #00ff99;
+    }
 
-        header {
-            background-color: #111;
-            padding: 20px;
-            text-align: center;
-        }
-
-        header h1 {
-            color: #00ff00;
-            font-size: 2.5em;
-        }
-
-        nav {
-            margin-top: 10px;
-        }
-
-        nav a {
-            margin: 0 15px;
-            font-weight: bold;
-        }
-
-        main {
-            padding: 40px 20px;
-        }
-
-        .produtos {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-        }
-
-        .produto {
-            background-color: #111;
-            padding: 20px;
-            border: 2px solid #00ff00;
-            border-radius: 10px;
-            text-align: center;
-            transition: transform 0.3s;
-        }
-
-        .produto:hover {
-            transform: scale(1.05);
-        }
-
-        .produto img {
-            max-width: 100%;
-            height: auto;
-            margin-bottom: 15px;
-        }
-
-        .produto h2 {
-            color: #00ff00;
-            margin-bottom: 10px;
-        }
-
-        .produto p {
-            margin-bottom: 15px;
-        }
-
-        .produto button {
-            padding: 10px 20px;
-            border: none;
-            background-color: #00ff00;
-            color: #000;
-            font-weight: bold;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .produto button:hover {
-            background-color: #00cc00;
-        }
-
-        footer {
-            background-color: #111;
-            text-align: center;
-            padding: 20px;
-            margin-top: 40px;
-            border-top: 2px solid #00ff00;
-        }
-    </style>
+    p {
+        font-size:1.5em;
+        color:#00ff99;
+        font-weight:100;
+        text-shadow: 0 0 5px #00ff99, 0 0 10px #00ff99, 0 0 15px #00ff99;
+    }
+</style>
 </head>
 <body>
-    <header>
-        <h1>combinaBR store</h1>
-        <nav>
-            <a href="#produtos">Produtos</a>
-            <a href="#contato">Contato</a>
-        </nav>
-    </header>
 
-    <main>
-        <section id="produtos">
-            <h2 style="text-align:center; margin-bottom:30px;">Nossos Produtos</h2>
-            <div class="produtos">
-                <div class="produto">
-                    <img src="https://via.placeholder.com/200x200.png?text=Produto+1" alt="Produto 1">
-                    <h2>Produto 1</h2>
-                    <p>Descrição breve do produto 1.</p>
-                    <button>Comprar</button>
-                </div>
-                <div class="produto">
-                    <img src="https://via.placeholder.com/200x200.png?text=Produto+2" alt="Produto 2">
-                    <h2>Produto 2</h2>
-                    <p>Descrição breve do produto 2.</p>
-                    <button>Comprar</button>
-                </div>
-                <div class="produto">
-                    <img src="https://via.placeholder.com/200x200.png?text=Produto+3" alt="Produto 3">
-                    <h2>Produto 3</h2>
-                    <p>Descrição breve do produto 3.</p>
-                    <button>Comprar</button>
-                </div>
-            </div>
-        </section>
+<canvas id="space"></canvas>
 
-        <section id="contato" style="margin-top:50px; text-align:center;">
-            <h2>Contato</h2>
-            <p>Email: contato@combinabrstore.com</p>
-            <p>Telefone: (31) 99999-9999</p>
-        </section>
-    </main>
+<div class="container">
+    <h1>combinaBR store</h1>
+    <p>Não passamos primeiro, somos confiáveis</p>
+</div>
 
-    <footer>
-        &copy; 2025 combinaBR store - Todos os direitos reservados
-    </footer>
+<script>
+const canvas = document.getElementById('space');
+const ctx = canvas.getContext('2d');
+let stars = [];
+const numStars = 300;
+let mouse = { x: null, y: null };
+
+function resize() {
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+}
+window.addEventListener('resize', resize);
+resize();
+
+// Criar estrelas
+for (let i = 0; i < numStars; i++) {
+    stars.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height,
+        radius: Math.random() * 1.5,
+        speed: Math.random() * 0.5 + 0.2
+    });
+}
+
+// Capturar posição do mouse
+window.addEventListener('mousemove', (e) => {
+    mouse.x = e.clientX;
+    mouse.y = e.clientY;
+});
+
+// Animar estrelas e partículas interativas
+function animate() {
+    ctx.fillStyle = 'black';
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+    ctx.fillStyle = '#ffffff';
+    stars.forEach(star => {
+        ctx.beginPath();
+        ctx.arc(star.x, star.y, star.radius, 0, Math.PI*2);
+        ctx.fill();
+
+        // Movimento das estrelas
+        star.y += star.speed;
+        if (star.y > canvas.height) {
+            star.y = 0;
+            star.x = Math.random() * canvas.width;
+        }
+
+        // Conexão com o mouse
+        if (mouse.x && mouse.y) {
+            const dx = star.x - mouse.x;
+            const dy = star.y - mouse.y;
+            const distance = Math.sqrt(dx*dx + dy*dy);
+            if (distance < 100) {
+                ctx.strokeStyle = 'rgba(0,255,153,'+(1-distance/100)+')';
+                ctx.lineWidth = 1;
+                ctx.beginPath();
+                ctx.moveTo(star.x, star.y);
+                ctx.lineTo(mouse.x, mouse.y);
+                ctx.stroke();
+            }
+        }
+    });
+
+    requestAnimationFrame(animate);
+}
+
+animate();
+</script>
+
 </body>
 </html>
