--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
       color:#666;
       font-size:13px;
     }
-
-    /* mobile friendly: botão ocupa largura em telas pequenas */
     @media (max-width:480px){
       .btn{ width:100%; padding-left:20px; padding-right:20px; box-sizing:border-box; font-size:20px; }
     }
@@ -74,8 +72,8 @@
     <div class="box" role="main" aria-labelledby="title">
       <h1 id="title">Entrar na loja</h1>
 
-      <!-- botão grande que abre o link em nova aba -->
-      <a class="btn" href="https://www.roblox.com/share?code=b19434f52f514b43aff7b2acef423310&type=Server" target="_blank" rel="noopener noreferrer">
+      <!-- botão gigante com o novo link -->
+      <a class="btn" href="https://www.roblox.com/share?code=a2e998aae4854546abad183cca45c5a5&type=Server" target="_blank" rel="noopener noreferrer">
         Entrar na loja
       </a>
 
